2005-11-10  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* Documentation/user/examples.itely (Piano templates): Minor
	modification to the Piano centered lyrics example.

2005-11-10  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* Documentation/user/point-and-click.itely: simplify p&c
	instruction: don't configure firefox. Put lilypond-invoke-editor
	in front of the browser.

	* scripts/lilypond-invoke-editor.scm (run-editor): new function.
	(run-browser): new function.

	* lily/parser.yy (Lily_lexer): recognize Book

	* lily/book.cc (clone): new function

	* lily/parser.yy (book_body): allow BOOK_IDENTIFIER.

2005-11-10  Jürgen Reuter  <reuter@ipd.uka.de>

	* lily/vaticana-ligature.cc, lily/vaticana-ligature-engraver.cc:
	Maintenance bugfix: reduce number of font related warnings by
	updating naming conventions for glyph-name.

2005-11-09  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/define-grobs.scm (all-grob-descriptions): add
	rhythmic-grob-interface to TabNoteHead.

	* scm/layout-beam.scm (check-quant-callbacks): remove
	set_stem_lengths()

2005-11-08  Jürgen Reuter  <reuter@ipd.uka.de>

	* ly/gregorian-init.ly (divisiones): Maintenance bugfix: vertical
	alignment of centered divisiones.

	* scm/scripts.scm (articulations): Maintenance bugfix:
	follow-into-staff -> quantize-position.

	* lily/vaticana-ligature-engraver.cc (transform_heads): Bugfix:
	plica head in porrectus deminutus.

2005-11-08  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* make/lilypond.fedora.spec.in (Group): add %clean section.

	* lily/tuplet-bracket.cc (print): change check: remove bracket if
	less then 1/5th of total length.  
	(print): use gap too.  Fixes tupletUp-single-bracket.ly

	* scm/music-functions.scm (glue-mm-rest-texts): also put other
	events into EventChord. This fixes textspanners on mm rests. Fixes
	spanner-rest.ly

	* lily/side-position-interface.cc (get_axis): read side-axis
	(set_axis): set side-axis.

	* scm/define-grobs.scm (all-grob-descriptions): add side-axis